js/js.translator/testData/incremental/invalidation/suspendFunctions/main/m.kt

suspend fun box(): Int {
    val x = fooX()
    val y = fooY()
    return x + y
}
